data/derived/sp14/progs/unify/prog1836.ml.out
Characters 31-49:
  ( f, b = ( f b ) )
  ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
